--- a/Properties/application.properties
+++ b/Properties/application.properties
@@ -1,4 +1,4 @@
-url=https://orgfarm-0f6a7441c6-dev-ed.develop.my.salesforce.com/secur/frontdoor.jsp?sid=00DgK00000DgXGF!AQEAQCmfnSn2ezUckwdgzr9bC5KuqJnKEh_gYhEMsWwxtAxAX_ADwAEc2iqKu_i0n7GH6JTF2ZM0af0wGDlqkOd7phirzYF4
+url=https://login.salesforce.com
 browser=chrome
 username=geethanjali.singaravelu240@agentforce.com
 password=Narayana7
