--- a/Properties/application.properties
+++ b/Properties/application.properties
@@ -1,5 +1,42 @@
-url=https://login.salesforce.com
+url1=https://login.salesforce.com/
+url=https://orgfarm-0f6a7441c6-dev-ed.develop.my.salesforce.com/secur/frontdoor.jsp?sid=00DgK00000DgXGF!AQEAQKh3.xiUJlzsdhsV5CKFyrSqDb70i.FUUVnVyAqP1EoPo9pMHxYd1OLEt0.OLOaqbjFSb7xi_3Vdnh2zOc4dsFIJ9qIV
 browser=chrome
 username=geethanjali.singaravelu240@agentforce.com
 password=Narayana7
 lastname=Shan
+expPwdError=Error: Please enter your password.
+emailLinkMsg=We've sent you an email with a link to finish resetting your password.
+checkUnPwd=Error: Please check your username and password. If you still can't log in, contact your Salesforce administrator.
+reportName=S
+uniqueReportName=UniS
+emailNme=Geethanjali Singaravelu
+emailAddr=geethanjali.singaravelu@gmail.com
+filelocation=Files/Calculator Addition Test Plan.docx
+photolocation=Files/Flower.jpeg
+lname=Sing
+message=SalesForceCucumberAutomation
+accountname=SalesForce
+viewname=viewsales1
+viewuniquename=viewunisales1
+vieweditname=viewsalesforce
+mergeacclink=Aut
+recentlyviewed=Automation Account
+oppname=Opp1
+accname=auto
+closedate=11/03/2025
+prob=60%
+campsource=user
+company=Textiles
+actviewdropdown=Today's Leads
+contacterrmsg=Error: You must enter a value
+contactviewname=conviewname
+contactlastname=Aksh
+contactaccname=Automation Account
+tabtoremove=Contacts
+
+
+
+
+
+
+
