--- a/Properties/application.properties
+++ b/Properties/application.properties
@@ -1,5 +1,5 @@
-url1=https://login.salesforce.com/
-url=https://orgfarm-0f6a7441c6-dev-ed.develop.my.salesforce.com/secur/frontdoor.jsp?sid=00DgK00000DgXGF!AQEAQKh3.xiUJlzsdhsV5CKFyrSqDb70i.FUUVnVyAqP1EoPo9pMHxYd1OLEt0.OLOaqbjFSb7xi_3Vdnh2zOc4dsFIJ9qIV
+url=https://login.salesforce.com/
+url1=https://orgfarm-0f6a7441c6-dev-ed.develop.my.salesforce.com/secur/frontdoor.jsp?sid=00DgK00000DgXGF!AQEAQKh3.xiUJlzsdhsV5CKFyrSqDb70i.FUUVnVyAqP1EoPo9pMHxYd1OLEt0.OLOaqbjFSb7xi_3Vdnh2zOc4dsFIJ9qIV
 browser=chrome
 username=geethanjali.singaravelu240@agentforce.com
 password=Narayana7
